# rose

./: .gitignore  .gitmodules  README.md  Vagrantfile  Vagrantfile-gsd  Vagrantfile.vmware  __init__.py  compileschedule.sh  faultschedule_template.c  faultscheduleparser.py  find_faults.py  find_relevant_symbols.py  install.sh  interfaces.sh  multipleruns.sh  multipleruntests.sh  new_schedule.yaml  parser.py  profiler.py  reproduce_bug.py  reproduction.py  requirements.sh  rose.py  rsync.sh  run_reproduction.sh  run_schedule.sh  runschedule.sh  runschedulessinfolder.sh  schedule_comparator.py  schedule_parser.py  schedulegenerator.py  setup.py  setup_vms.sh  stracepid.sh  temp_sched.yaml  test.sh  vagrantinstall.sh
Kernel/: hello.c
Pseudocode/: controller  ebpf_hook  ebpf_syscall
Tests/: mongod.conf
analyzer/: __init__.py  binary_parser.py  (+1 more)
rosetracer/: Cargo.toml  build.rs  rosetracer
rosetracer/src/: auxiliary.rs  count_syscalls.rs  intercept_and_count.rs  intercept_only.rs  lib.rs  main.rs  production_tracer.rs  productiontracer.rs  rw_tracer.rs  save_info.rs  save_io.rs  skel_types.rs  statistics_tracer.rs  statisticstracer.rs  tracer.rs  uprobes.rs
rosetracer/src/bpf/: all.bpf.c  aux.h  full_tracer.bpf.c  intercept_only.bpf.c  old_tracer.bpf.c  pin_maps.bpf.c  production_tracer.bpf.c  rw_tracer.bpf.c  save_info.bpf.c  save_io.bpf.c  statistics_tracer.bpf.c  trace.bpf.c  tracer.bpf.c  uprobes.bpf.c  vmlinux.h  xdp.bpf.c
rosetracer/src/other_tracing/: count_syscalls.rs  intercept_and_count.rs  intercept_only.rs  mod.rs  save_info.rs  save_io.rs  uprobes.rs
(+1292 files in other folders)
