[package]
name = "rosetracer"
version = "0.1.0"
authors = ["Sebastião Amaro"]
license = "GPL-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.22"
libc = "*"
structopt = "0.3"
ctrlc = "3.1"
object = "0.25"
plain = "0.2"
libloading = "0.7.3"
rand = "0.8"
nix = "0.24.1"
libbpf-sys = "1.4.3"
[build-dependencies]
libbpf-cargo = "0.22"
